2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: In AC_CHECK_LIB for libftdi, check for
	ftdi_usb_get_strings() rathern than ftdi_init(), as this is a more
	specific thing to search for in order to make sure getting a
	recent enough libftdi.

2011-08-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #34027: avrdude AT90S1200 Problem (part 1 - bitbang
	programmers)
	* config_gram.y: Introduce new keyword "is_at90s1200".
	* lexer.l: (Ditto.)
	* avrdude.conf.in: Applew new keyword to the AT90S1200 device.
	* avrpart.h: Introduce new flag AVRPART_IS_AT90S1200, reflecting
	the is_at90s1200 configuration keyword.
	* bitbang.c (bitbang_initialize): Replace existing test for
	AT90S1200 by AVRPART_IS_AT90S1200
	* avr.c (avr_write_byte_default): Avoid the pre-write reading for
	the AT90S1200, as this appears to sometimes corrupt the high byte
	by pre-programming the low byte just written into it.

2011-08-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for post-5.11.

2011-08-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for releasing AVRDUDE 5.11.

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.1: Update the list of supported AVR devices.
	* doc/avrdude.texi: (Ditto).

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: add -lusb as "other libraries" when checking
	for libftdi.

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Juergen Weigert:
	patch #7056: adding support for mikrokopter bootloader to butterfly
	* butterfly.c: Add some specific logic to handle the
	mikrokopter.de butterfly bootloader.
	* butterfly.h: Add one related function declaration.
	* config_gram.y: Add butterfly_mk keyword.
	* lexer.l: (Ditto.)
	* avrdude.conf.in: Add entry for butterfly_mk.

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Stefan Tomanek:
	patch #7542: add default_bitclock to configuration files
	* config.c: Add the new keyword and its handling.